2009-XX-XX
  * Fixed in parsing the reflow parameter, closes #123
    Reported by: tomasz dot sterna at sensisoft dot com
    Fixed by: Bas van der Vlies

   * implemented workflow for tickets that are reopend, closes #70
     Reported by: hju att jochenkuhl dot de
     Author by: Bas van der Vlies

2009-01-30
  * applied patch exit with non-zero return code on failure, closes #117
    Author: admin-egon at ikw dot uos dot de
    Applied by : Bas van der Vlies

  * Ticket update with attachments did not work, closes #120
    Reported by: Alexander Verkooijen (alexander at sara dot nl)
    Fixed by: Bas van der Vlies

  * Removed obsolete code
    Author :  Bas van der Vlies

  * When email address is known then the author name and email address
    is used from the preference tab.  The match is case insensitive,
    closes #118
    Reported by: Pusateri, Matthew <Matthew dot Pusateri at tekelec dot com
    Fixed by: Bas van der Vlies

  * Ticket id is not reported as ticket change, eg:
    {{{
        *   id  set to 118
    }}}
    Author :  Bas van der Vlies

2009-01-19
  * applied patch to support RFC 3676 (format=flowed), closes #94, #99
    This patch adds a new option: reflow (default: False/0)
    Author: ben at fetchsoftworks dot com
    Applied by : Bas van der Vlies

  * Fixed a bug in reply_all option, closes #95
    Reported by: gmcgrath at princeton dot edu
    Fixed by: Bas van der Vlies

  * Applied a patch for default values for custom ticket fields, closes #101
    Author: ben at fetchsoftworks dot com
    Applied by: Bas van der Vlies

  * Fixed a bug that a ticket was not updated when we only update ticket 
    field(s) via email (empty body email), closes #113
    Reported by: winnie at debian dot org
    Fixed by: Bas van der Vlies
 
  * Better support for inline attachments and multiple body parts, closes #105,
    #80. Inline images in email are also shown in the ticket with the trac
    [[Image(..)]] macro.